--- a/UseOfflineAI/UseOfflineAI/MainPage.xaml
+++ b/UseOfflineAI/UseOfflineAI/MainPage.xaml
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:CallOnlineAI"
-             x:Class="CallOnlineAI.MainPage">
+             xmlns:local="clr-namespace:UseOfflineAI"
+             x:Class="UseOfflineAI.MainPage">
 
     <StackLayout>
         <!-- Place new controls here -->
         <Label Text="Click to take picture" 
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" x:Name="LabelStatus" />
-        <Button Text="Take Picture" Clicked="Button_Clicked" />
+        <Button Text="Take a Picture" Clicked="Button_Clicked" />
     </StackLayout>
 
 </ContentPage>
